@@ -1,3 +1,6 @@
+[SNAPSHOT]
+ * Add Polar API (https://www.polar.com/) (thanks to https://github.com/vidi42)
+
 [6.9.0]
  * Add Xero API (https://www.xero.com/) (thanks to https://github.com/SidneyAllen)
 
